--- a/_posts/ecrits/2015-09-12-test-post.md
+++ b/_posts/ecrits/2015-09-12-test-post.md
@@ -1,7 +1,8 @@
 ---
 categories: Écrits
 author: ""
-tags: null
+tags: 
+  - "null"
 "written-director": essai
 "written-writers": essai
 "written-publication": essai
@@ -9,9 +10,10 @@ tags: null
 "written-number": .nan
 "written-editor": ""
 "written-town": ""
-published: false
+published: true
 title: "Test-post"
 ---
+
 
 ## This a test post
  Here is my test post.
