Updated 2015-10-17-séance 1.md

--- a/_posts/medias/2015-10-17-séance 1.md
+++ b/_posts/medias/2015-10-17-séance 1.md
@@ -9,13 +9,15 @@ tags:
 "media-view": ""
 "media-rythm": ""
 published: true
-title: Séminaire Cinéphilies/sériephilies 2.0
+title: "Séminaire "
 ---
 
+## Séminaire Cinéphilies/Sériephilies 2.0 IRCAV + CEISME
+### Séance 1
 
-## Séance 1 
-**Jean-Marc Leveratto** (Professeur Université de Lorraine):“L’observation de la  sociabilité littéraire sur Internet. De la sociologie des amateurs à la sociologie de  l'expertise" et **Clément  Combes**  (Docteur  en  sociologie,  ATER):  “Modes  d'expression  et  pratiques d'échanges des amateurs de séries sur Internet". 
+**Jean-Marc Leveratto** (Professeur Université de Lorraine):“L’observation de la  sociabilité littéraire sur Internet. De la sociologie des amateurs à la sociologie de  l'expertise" et 
+
+**Clément  Combes**  (Docteur  en  sociologie,  ATER):  “Modes  d'expression  et  pratiques d'échanges des amateurs de séries sur Internet". 
 
 La séance en vidéo:[http://epresence.univ-paris3.fr/3/Watch/811786.aspx_]( "Séance 1")
-
-
+![]({{site.baseurl}}/media/flyer%20se%CC%81ance%202.jpg)![flyer séance 2.jpg]({{site.baseurl}}/media/flyer séance 2.jpg)
