Updated 2015-10-17-séance 1.md

--- a/_posts/medias/2015-10-17-séance 1.md
+++ b/_posts/medias/2015-10-17-séance 1.md
@@ -9,7 +9,7 @@ tags:
 "media-view": ""
 "media-rythm": ""
 published: true
-title: "Séminaire "
+title: Séminaire
 ---
 
 ## Séminaire Cinéphilies/Sériephilies 2.0 IRCAV + CEISME
