--- a/_posts/medias/2015-10-17-séance 1.md
+++ b/_posts/medias/2015-10-17-séance 1.md
@@ -9,8 +9,9 @@ tags:
 "media-view": ""
 "media-rythm": ""
 published: true
-title: Séminaire
+title: Séminaire Cinéphilies/Sériephilies 2.0 n°1
 ---
+
 
 ## Séminaire Cinéphilies/Sériephilies 2.0 IRCAV + CEISME
 ### Séance 1
