--- a/_posts/medias/2015-11-08-exemple.md
+++ b/_posts/medias/2015-11-08-exemple.md
@@ -2,14 +2,16 @@
 categories: Écrits
 layout: post
 author: ""
-tags: null
+tags: 
+  - "null"
 "media-name": ""
 "media-url": ""
 "media-view": ""
 "media-rythm": ""
-published: false
+published: true
 title: exemple
 ---
+
 
 ## A New Post
 
