--- a/_posts/medias/2015-10-26-s-minaire.md
+++ b/_posts/medias/2015-10-26-s-minaire.md
@@ -1,7 +1,9 @@
 ---
 categories: Écrits
+layout: post
 author: ""
-tags: null
+tags: 
+  - "null"
 "media-name": ""
 "media-url": ""
 "media-view": ""
@@ -10,12 +12,11 @@ published: false
 title: "Séminaire "
 ---
 
+
 ## Séance 3 Cinéphilies/sériephilies 2.0
 
 **Yann Vilain** (Professeur agrégé, Doctorant Paris 3): “Regard croisé sur le réception de Goal of the Dead : des forums communautaires de Mad Movies aux sites généralistes”.
 
 **Marie-Caroline Neuvillers** (Doctorante Paris 3): "La contribution par l'évaluation: parle-t-on de la même façon des séries et des films sur SensCritique ?"
 
-La séance en vidéo: [http://epresence.univ-paris3.fr/3/Watch/971876.aspx]("séance 3")
-
-
+La séance en vidéo c'est par [ici]([http://epresence.univ-paris3.fr/3/Watch/971876.aspx])
