--- a/_posts/medias/2015-10-26-s-minaire.md
+++ b/_posts/medias/2015-10-26-s-minaire.md
@@ -20,3 +20,5 @@ title: "Séminaire "
 **Marie-Caroline Neuvillers** (Doctorante Paris 3): "La contribution par l'évaluation: parle-t-on de la même façon des séries et des films sur SensCritique ?"
 
 La séance en vidéo c'est par [ici]([http://epresence.univ-paris3.fr/3/Watch/971876.aspx])
+![flyer séance 3.jpg]({{site.baseurl}}/media/flyer séance 3.jpg)
+
