--- a/_posts/medias/2015-10-26-s-minaire.md
+++ b/_posts/medias/2015-10-26-s-minaire.md
@@ -8,8 +8,8 @@ tags:
 "media-url": ""
 "media-view": ""
 "media-rythm": ""
-published: false
-title: "Séminaire "
+published: true
+title: Séminaire Ciné/sériephilies 2.0 n°3
 ---
 
 
