--- a/_posts/medias/2015-10-26-s-minaire.md
+++ b/_posts/medias/2015-10-26-s-minaire.md
@@ -3,7 +3,10 @@ categories: Écrits
 layout: post
 author: ""
 tags: 
-  - "null"
+  - réception
+  - sociologie
+  - sens critique
+  - évaluation
 "media-name": ""
 "media-url": ""
 "media-view": ""
