Updated 2015-10-17-séance 1.md

--- a/_posts/medias/2015-10-17-séance 1.md
+++ b/_posts/medias/2015-10-17-séance 1.md
@@ -17,6 +17,7 @@ title: Séminaire Ciné/Sériephilies 2.0 n°1
 
 
 
+
 ## Séminaire Cinéphilies/Sériephilies 2.0 IRCAV + CEISME
 ### Séance 1
 
@@ -24,5 +25,5 @@ title: Séminaire Ciné/Sériephilies 2.0 n°1
 
 **Clément  Combes**  (Docteur  en  sociologie,  ATER):  “Modes  d'expression  et  pratiques d'échanges des amateurs de séries sur Internet". 
 
-La séance en vidéo c'est par [ici]([http://epresence.univ-paris3.fr/3/Watch/811786.aspx_])
+La séance en vidéo c'est par [ici](http://epresence.univ-paris3.fr/3/Watch/811786.aspx)
 ![flyer séance 2.jpg]({{site.baseurl}}/media/flyer%20se%CC%81ance%202.jpg)
