--- a/_posts/ecrits/2014-3-3-theoreme15.md
+++ b/_posts/ecrits/2014-3-3-theoreme15.md
@@ -1,17 +1,23 @@
 ---
-layout: post
-title: Théorème n°15, "Le cinéma en situations"
-author: Mélanie Boissonneau
 categories: Écrits
-tags : [cinéphilies, histoire, mesure de l’art, plaisir]
-written-director: Laurent Creton, Laurent Jullier, Raphaëlle Moine.
-written-writers: Mélanie Boissonneau, Marta Boni, Adrienne Boutang, Francesco Casetti, Laurent Jullier, Barbara Laborde, Roger Odin, Jeffrey Sconce, Linda Williams
-written-publication: les matins blèmes
-written-collection: Pas pertinent ici
-written-number: 10
-written-editor: Presse de la Sorbonne Nouvelle
-written-town: Paris
+layout: post
+title: "Théorème n°15, \"Le cinéma en situations\""
+author: ""
+tags: 
+  - cinéphilies
+  - histoire
+  - mesure de l’art
+  - plaisir
+"written-director": "Laurent Creton, Laurent Jullier, Raphaëlle Moine."
+"written-writers": "Mélanie Boissonneau, Marta Boni, Adrienne Boutang, Francesco Casetti, Laurent Jullier, Barbara Laborde, Roger Odin, Jeffrey Sconce, Linda Williams"
+"written-publication": ""
+"written-collection": ""
+"written-number": 0
+"written-editor": Presses de la Sorbonne Nouvelle
+"written-town": Paris
+published: true
 ---
+
 
 Introduction : Pour une approche interdisciplinaire de la notion de situation cinématographique.
 ##Première partie : Que faire avec les films ?##
