--- a/_posts/ecrits/2014-3-3-theoreme15.md
+++ b/_posts/ecrits/2014-3-3-theoreme15.md
@@ -10,11 +10,11 @@ tags:
   - plaisir
 "written-director": "Laurent Creton, Laurent Jullier, Raphaëlle Moine."
 "written-writers": "Mélanie Boissonneau, Marta Boni, Adrienne Boutang, Francesco Casetti, Laurent Jullier, Barbara Laborde, Roger Odin, Jeffrey Sconce, Linda Williams"
-"written-publication": ""
+"written-publication": "Revue de l'Institut de recherche sur le cinéma et l'audiovisuel"
 "written-collection": ""
-"written-number": 0
-"written-editor": Presses de la Sorbonne Nouvelle
-"written-town": Paris
+"written-number": 15
+"written-editor": Presses  Sorbonne Nouvelle
+"written-town": "Paris, 2012. "
 published: true
 ---
 
