--- a/_posts/ecrits/2014-3-3-theoreme15.md
+++ b/_posts/ecrits/2014-3-3-theoreme15.md
@@ -1,7 +1,7 @@
 ---
 categories: Écrits
 layout: post
-title: "Théorème n°15, \"Le cinéma en situations\""
+title: "Théorème n°15, \"Le cinéma en situation\""
 author: ""
 tags: 
   - cinéphilies
@@ -35,3 +35,4 @@ Marta Boni – "De l'amour du cinéma et des série télé à l'ère du web 2.0"
 Mélanie Boissonneau – "Jane, be good ! De Jane Parker à Mme Tarzan (1932-1942), une illustration du retour à l'ordre moral ?
 Adrienne Boutang – "Politically incorrect et bathroom humor dans la comédie américaine contemporaine"
 Linda Williams – "Cluster Fuck : Le cadre coercitif dans Standard Operation Procedure, d'Errol Morris"
+
