--- a/_posts/ecrits/2014-3-3-theoreme15.md
+++ b/_posts/ecrits/2014-3-3-theoreme15.md
@@ -19,6 +19,7 @@ published: true
 ---
 
 
+
 Introduction : Pour une approche interdisciplinaire de la notion de situation cinématographique.
 ##Première partie : Que faire avec les films ?##
 Jean-Marc Leveratto – "Histoire du cinéma et sociologie de la consommation cinématographique"
@@ -36,3 +37,4 @@ Mélanie Boissonneau – "Jane, be good ! De Jane Parker à Mme Tarzan (1932-194
 Adrienne Boutang – "Politically incorrect et bathroom humor dans la comédie américaine contemporaine"
 Linda Williams – "Cluster Fuck : Le cadre coercitif dans Standard Operation Procedure, d'Errol Morris"
 
+({{site.baseurl}}/media/livre-02.jpg)
