--- a/_posts/ecrits/2014-3-3-theoreme15.md
+++ b/_posts/ecrits/2014-3-3-theoreme15.md
@@ -37,4 +37,4 @@ Mélanie Boissonneau – "Jane, be good ! De Jane Parker à Mme Tarzan (1932-194
 Adrienne Boutang – "Politically incorrect et bathroom humor dans la comédie américaine contemporaine"
 Linda Williams – "Cluster Fuck : Le cadre coercitif dans Standard Operation Procedure, d'Errol Morris"
 
-({{site.baseurl}}/media/livre-02.jpg)
+![livre-02.jpg]({{site.baseurl}}/media/livre-02.jpg)
