--- a/_posts/medias/2015-10-17-séance 1.md
+++ b/_posts/medias/2015-10-17-séance 1.md
@@ -9,7 +9,7 @@ tags:
 "media-view": ""
 "media-rythm": ""
 published: true
-title: Séminaire Cinéphilies/Sériephilies 2.0 n°1
+title: Séminaire n°1 Cinéphilies/Sériephilies 2.0
 ---
 
 
